--- a/crypt-key-generator/pom.xml
+++ b/crypt-key-generator/pom.xml
@@ -21,7 +21,7 @@
 	<dependency>
 			<groupId>org.marceloleite.libs</groupId>
 			<artifactId>arguments-utils</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.marceloleite.libs</groupId>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
